--- a/crm-user-management/pom.xml
+++ b/crm-user-management/pom.xml
@@ -41,6 +41,12 @@
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.project.crm.base.model</groupId>
+            <artifactId>crm-base-model</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
